<resources>
    <string name="app_name">Active House</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="saveLogin">Save my login</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rooms">Rooms</string>
    <string name="settings">Settings</string>
    <string name="viewRooms">View Rooms</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="allLightsOff">All lights have been turned off</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="allLightsOn">All lights have been turned on</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="view_all_rooms">View All Rooms</string>
    <string name="responseLog">"Response from url: "</string>
    <string name="jsonError">"Json parsing error: "</string>
    <string name="jsonError2">Couldn\'t get json from server.</string>
    <string name="jsonError3">Couldn\'t get json from server. Check LogCat for possible errors!</string>
    <string name="lightOn">Light turned on</string>
    <string name="lightScheduleOn">Light Schedule Turned On</string>
    <string name="lightScheduleOff">Light Schedule Turned Off</string>
    <string name="lightOff">Light turned off</string>
    <string name="today_s_water_usage">Today\'s Water Usage</string>
    <string name="toggle_all_lights">Toggle All Lights</string>
    <string name="average_power_usage">Average Power Usage</string>
    <string name="average_water_usage">Average Water Usage</string>
    <string name="humidity">Humidity</string>
    <string name="number_of_lights_on">Number of Lights On</string>
    <string name="temperature">Temperature</string>
    <string name="today_s_power_usage">Today\'s Power Usage</string>
    <string name="brightness">Brightness</string>
    <string name="gas_alert">Gas Alert</string>
    <string name="light_status_toggle">Light Status Toggle</string>
    <string name="light_schedule_toggle">Light Schedule Toggle</string>
    <string name="lights_time_on">Lights Time On</string>
    <string name="lights_time_off">Lights Time Off</string>
    <string name="closing_activity">Closing Activity</string>
    <string name="close_body">Are you sure you want to close this activity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rename_room">Rename Room</string>
    <string name="room_name_updated">Room name updated</string>
    <string name="cancel">Cancel</string>
    <string name="urn">Update Room Name</string>
    <string name="renameMessage">Please enter new room name</string>
    <string name="ok">Ok</string>
    <string name="renameError">Error updating room name</string>
    <string name="the">"The "</string>
    <string name="house">" House"</string>
    <string name="user">"User: "</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="house_id">House ID</string>
    <string name="email">Email</string>
    <string name="register_a_new_active_house">Register a new Active House</string>
    <string name="errorLoggingIn">Error Logging in, check Username and Password</string>
    <string name="errorRegistering">Error registering, make sure all fields are filled out</string>
    <string name="invalid_houseid">Invalid House ID</string>
    <string name="regSuccess">Account created, please login now</string>
    <string name="ERRORLOGGINGIN">Error Logging in, please enter Username and Password</string>


</resources>
