<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_viewRooms"
            android:icon="@drawable/ic_pageview_black_48dp"
            android:title="@string/viewRooms" />
       <!-- <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_history_black_48dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/settings" /> -->
    </group>

    <item android:title="@string/rooms"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/nav_1"

                android:title="" />

        </menu>
    </item>

</menu>
