<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fitsSystemWindows="true"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/content_home"
tools:context="io.github.activehouse.HomeActivity"
tools:showIn="@layout/app_bar_home"
android:background="@color/colorTextDark"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="72dp">


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dip" >


            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout1"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginRight="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/thermometer"
                        android:id="@+id/imageView2"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewTemp"
                        android:layout_weight="2"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:gravity="center_vertical"
                        android:textSize="34dip" />
                </LinearLayout>

                <TextView
                    android:text="Temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout2"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/water_percent"
                        android:id="@+id/imageView1"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewHumidity"
                        android:layout_weight="2"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:gravity="center_vertical"
                        android:textSize="38dip" />
                </LinearLayout>

                <TextView
                    android:text="@string/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>
            </LinearLayout>



        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dip" >


            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout3"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginRight="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/power_plug"
                        android:id="@+id/imageView4"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:id="@+id/textViewPowerToday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:textSize="30dip" />
                </LinearLayout>

                <TextView
                    android:text="@string/today_s_power_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout4"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/power_plug"
                        android:id="@+id/imageView3"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewPowerAverage"
                        android:layout_weight="2"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:gravity="center_vertical"
                        android:textSize="32dip" />
                </LinearLayout>

                <TextView
                    android:text="@string/average_power_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>
            </LinearLayout>



        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dip" >


            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout5"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginRight="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/water_pump"
                        android:id="@+id/imageView5"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:id="@+id/textViewWaterToday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:textSize="30dip" />
                </LinearLayout>

                <TextView
                    android:text="@string/today_s_water_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout6"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/water_pump"
                        android:id="@+id/imageView6"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewWaterAverage"
                        android:layout_weight="2"
                        android:textSize="40dip"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <TextView
                    android:text="@string/average_water_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>


            </LinearLayout>



        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dip" >


            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout7"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginRight="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/lightbulb"
                        android:id="@+id/imageView7"
                        android:layout_weight="4"
                        android:minHeight="70dip"
                        android:tint="@color/colorTextDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewLights"
                        android:layout_weight="2"
                        android:textSize="48dip"
                        android:paddingTop="5dip"
                        android:textColor="@color/colorTextDark"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <TextView
                    android:text="@string/number_of_lights_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/layout_bg"
                android:id="@+id/linearLayout8"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dip"
                    android:layout_marginTop="5dip">


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:id="@+id/linearLayoutOn">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/lightbulb_outline"
                            android:id="@+id/imageView9"
                            android:layout_weight="4"
                            android:minHeight="71dp"
                            android:tint="@color/colorTextDark" />
                        <TextView
                            android:text="@string/on"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextDark"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:id="@+id/linearLayoutOff">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/lightbulb"
                            android:id="@+id/imageView8"
                            android:layout_weight="4"
                            android:minHeight="71dp"
                            android:tint="@color/colorTextDark" />
                        <TextView
                            android:text="@string/off"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView"
                            android:textAlignment="center"
                            android:textColor="@color/colorTextDark"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:text="@string/toggle_all_lights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDark"/>


            </LinearLayout>



        </TableRow>

    </TableLayout>



</ScrollView>
